--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
-    "chart.js": "^4.4.1"
+    "chart.js": "^4.4.1",
+    "sweetalert2": "^11.10.4"
   }
 }
